# Cpp_Sirius

lab_1_2/: CMakeLists.txt  mainapp.cpp  polygon.txt
lab_1_2/lib/gtest/docs/: advanced.md  gmock_cheat_sheet.md  primer.md
lab_1_2/lib/gtest/docs/reference/: testing.md
lab_1_2/lib/gtest/googlemock/src/: gmock-spec-builders.cc
lab_1_2/lib/gtest/googlemock/test/: gmock-actions_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-matchers_test.h  gmock-more-actions_test.cc  gmock-port_test.cc  gmock-spec-builders_test.cc  gmock_link_test.h  gmock_output_test.py  gmock_output_test_.cc  gmock_stress_test.cc
lab_1_2/lib/gtest/googletest/: CMakeLists.txt  README.md
lab_1_2/lib/gtest/googletest/cmake/: internal_utils.cmake
lab_1_2/lib/gtest/googletest/samples/: prime_tables.h  sample1_unittest.cc
lab_1_2/lib/gtest/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
lab_1_2/lib/gtest/googletest/test/: googletest-break-on-failure-unittest.py  googletest-catch-exceptions-test.py  googletest-death-test-test.cc  googletest-death-test_ex_test.cc  googletest-failfast-unittest.py  googletest-filepath-test.cc  googletest-filter-unittest.py  googletest-global-environment-unittest.py  googletest-json-outfiles-test.py  gtest_help_test.py  (+27 more)
lab_1_2/src/: CMakeLists.txt  Edge.cpp  Edge.h  Point.cpp  Point.h  Polygon.h  f.cpp  f.h
lab_1_2/test/: CMakeLists.txt  main.cpp
(+50 files in other folders)
